--- a/notebooks/07_RealTimeScoring.ipynb
+++ b/notebooks/07_RealTimeScoring.ipynb
@@ -15,7 +15,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1.0,
+      "version": 1,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -35,7 +35,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1.0,
+      "version": 1,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -56,7 +56,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1.0,
+      "version": 1,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -78,7 +78,7 @@
     "from azureml.core.webservice import AksWebservice\n",
     "from azureml.core.workspace import Workspace\n",
     "from dotenv import get_key, find_dotenv\n",
-    "from azure_utils.utilities import read_questions, text_to_json, get_auth\n"
+    "from azure_utils.utilities import read_questions, text_to_json, get_auth"
    ]
   },
   {
@@ -133,7 +133,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1.0,
+      "version": 1,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -156,7 +156,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1.0,
+      "version": 1,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -168,9 +168,13 @@
    },
    "outputs": [],
    "source": [
-    "def buttons_and_texts(\n",
-    "    data, id, answerid, text, handle_click, layout=widgets.Layout(width=\"100%\"), n=15\n",
-    "):\n",
+    "def buttons_and_texts(data,\n",
+    "                      id,\n",
+    "                      answerid,\n",
+    "                      text,\n",
+    "                      handle_click,\n",
+    "                      layout=widgets.Layout(width=\"100%\"),\n",
+    "                      n=15):\n",
     "    \"\"\"Construct buttons, text areas, and a mapping from IDs to text areas.\"\"\"\n",
     "    items = []\n",
     "    text_map = {}\n",
@@ -180,12 +184,12 @@
     "        button.open = False\n",
     "        button.on_click(handle_click)\n",
     "        items.append(button)\n",
-    "        text_area = widgets.Textarea(\n",
-    "            data.iloc[i][text], placeholder=data.iloc[i][id], layout=layout\n",
-    "        )\n",
+    "        text_area = widgets.Textarea(data.iloc[i][text],\n",
+    "                                     placeholder=data.iloc[i][id],\n",
+    "                                     layout=layout)\n",
     "        items.append(text_area)\n",
     "        text_map[data.iloc[i][id]] = text_area\n",
-    "    return items, text_map\n"
+    "    return items, text_map"
    ]
   },
   {
@@ -193,7 +197,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1.0,
+      "version": 1,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -214,7 +218,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1.0,
+      "version": 1,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -226,9 +230,9 @@
    },
    "outputs": [],
    "source": [
-    "def duplicates_questions_widget(\n",
-    "    duplicates, questions, layout=widgets.Layout(width=\"100%\")\n",
-    "):\n",
+    "def duplicates_questions_widget(duplicates,\n",
+    "                                questions,\n",
+    "                                layout=widgets.Layout(width=\"100%\")):\n",
     "    \"\"\"Construct a duplicates and questions exploration widget.\"\"\"\n",
     "    # Construct the duplicates Tab of buttons and text areas.\n",
     "    duplicates_items, duplicates_map = buttons_and_texts(\n",
@@ -259,8 +263,9 @@
     "    )\n",
     "    questions_tab.set_title(0, questions_title)\n",
     "    # Put both tabs in an HBox.\n",
-    "    duplicates_questions = widgets.HBox([duplicates_tab, questions_tab], layout=layout)\n",
-    "    return duplicates_map, questions_map, duplicates_questions\n"
+    "    duplicates_questions = widgets.HBox([duplicates_tab, questions_tab],\n",
+    "                                        layout=layout)\n",
+    "    return duplicates_map, questions_map, duplicates_questions"
    ]
   },
   {
@@ -268,7 +273,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1.0,
+      "version": 1,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -289,7 +294,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1.0,
+      "version": 1,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -309,7 +314,7 @@
     "        button.open = False\n",
     "    else:\n",
     "        questions_map[button.description].rows = 10\n",
-    "        button.open = True\n"
+    "        button.open = True"
    ]
   },
   {
@@ -317,7 +322,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1.0,
+      "version": 1,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -339,7 +344,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1.0,
+      "version": 1,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -393,12 +398,13 @@
     "            set_button_color(questions_items[::2], selected_button.answerid)\n",
     "        if questions_button_score is True:\n",
     "            questions_items = [\n",
-    "                item\n",
-    "                for button, text_area in zip(*[iter(questions_items)] * 2)\n",
-    "                for item in (add_button_prob(button, questions_scores), text_area)\n",
+    "                item for button, text_area in zip(*[iter(questions_items)] * 2)\n",
+    "                for item in (add_button_prob(button, questions_scores),\n",
+    "                             text_area)\n",
     "            ]\n",
     "        duplicates_questions.children[1].children[0].children = questions_items\n",
-    "        duplicates_questions.children[1].set_title(0, selected_button.description)\n",
+    "        duplicates_questions.children[1].set_title(0,\n",
+    "                                                   selected_button.description)\n",
     "        return True\n",
     "    else:\n",
     "        return False\n",
@@ -407,15 +413,10 @@
     "def add_button_prob(button, questions_scores):\n",
     "    \"\"\"Return an HBox containing button and its probability.\"\"\"\n",
     "    id = button.description\n",
-    "    prob = widgets.Label(\n",
-    "        score_label\n",
-    "        + \": \"\n",
-    "        + str(\n",
-    "            int(\n",
-    "                math.ceil(score_scale * questions_scores.loc[id][questions_probability])\n",
-    "            )\n",
-    "        )\n",
-    "    )\n",
+    "    prob = widgets.Label(score_label + \": \" + str(\n",
+    "        int(\n",
+    "            math.ceil(score_scale *\n",
+    "                      questions_scores.loc[id][questions_probability]))))\n",
     "    return widgets.HBox([button, prob])\n",
     "\n",
     "\n",
@@ -423,8 +424,7 @@
     "    \"\"\"Set each button's color according to its label.\"\"\"\n",
     "    for i in range(len(button)):\n",
     "        button[i].style.button_color = (\n",
-    "            \"lightgreen\" if button[i].answerid == answerid else None\n",
-    "        )\n"
+    "            \"lightgreen\" if button[i].answerid == answerid else None)"
    ]
   },
   {
@@ -452,8 +452,8 @@
     "    #     scores = result.json()['result'][0]\n",
     "    scores = eval(result.json())\n",
     "    scores_df = pd.DataFrame(\n",
-    "        scores, columns=[questions_id, questions_answerid, questions_probability]\n",
-    "    )\n",
+    "        scores,\n",
+    "        columns=[questions_id, questions_answerid, questions_probability])\n",
     "    scores_df[questions_id] = scores_df[questions_id].astype(str)\n",
     "    scores_df[questions_answerid] = scores_df[questions_answerid].astype(str)\n",
     "    scores_df = scores_df.set_index(questions_id, drop=False)\n",
@@ -465,7 +465,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1.0,
+      "version": 1,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -485,7 +485,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1.0,
+      "version": 1,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -515,7 +515,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1.0,
+      "version": 1,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -537,7 +537,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1.0,
+      "version": 1,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -563,7 +563,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1.0,
+      "version": 1,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -583,7 +583,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1.0,
+      "version": 1,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -608,7 +608,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1.0,
+      "version": 1,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -630,7 +630,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1.0,
+      "version": 1,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -654,7 +654,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1.0,
+      "version": 1,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -675,7 +675,7 @@
    "metadata": {
     "extensions": {
      "jupyter_dashboards": {
-      "version": 1.0,
+      "version": 1,
       "views": {
        "grid_default": {},
        "report_default": {
@@ -703,7 +703,7 @@
   "extensions": {
    "jupyter_dashboards": {
     "activeView": "report_default",
-    "version": 1.0,
+    "version": 1,
     "views": {
      "grid_default": {
       "name": "grid",
@@ -736,10 +736,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
