--- a/notebooks/08_TearDown.ipynb
+++ b/notebooks/08_TearDown.ipynb
@@ -29,7 +29,7 @@
     "from azureml.core.webservice import AksWebservice\n",
     "from azureml.core.workspace import Workspace\n",
     "from dotenv import get_key, find_dotenv\n",
-    "from azure_utils.utilities import get_auth\n"
+    "from azure_utils.utilities import get_auth"
    ]
   },
   {
@@ -234,10 +234,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
-    "source": [],
     "metadata": {
      "collapsed": false
-    }
+    },
+    "source": []
    }
   }
  },
