--- a/notebooks/02_TrainOnLocal.ipynb
+++ b/notebooks/02_TrainOnLocal.ipynb
@@ -166,7 +166,7 @@
     "scrpt = \"create_model.py\"\n",
     "args = [\n",
     "    \"--inputs\",\n",
-    "    os.path.abspath(\"./data_folder\"),\n",
+    "    \"./data_folder\",\n",
     "    \"--outputs\",\n",
     "    \"outputs\",\n",
     "    \"--estimators\",\n",
