Trying to get test 2 to pass

--- a/notebooks/01_DataPrep.ipynb
+++ b/notebooks/01_DataPrep.ipynb
@@ -35,7 +35,8 @@
     "import os\n",
     "\n",
     "import pandas as pd\n",
-    "from azure_utils.utilities import read_csv_gz, clean_text, round_sample_strat, random_merge"
+    "from azure_utils.utilities import read_csv_gz, clean_text, round_sample_strat, random_merge\n",
+    "from notebooks import DIRECTORY"
    ]
   },
   {
@@ -60,7 +61,7 @@
     "# The maximum number of duplicate matches\n",
     "match = 20\n",
     "# The output files path\n",
-    "outputs_path = os.path.join('.', 'data_folder')"
+    "outputs_path = DIRECTORY + \"/data_folder\""
    ]
   },
   {
