--- a/notebooks/02_TrainOnLocal.ipynb
+++ b/notebooks/02_TrainOnLocal.ipynb
@@ -166,7 +166,7 @@
     "scrpt = \"create_model.py\"\n",
     "args = [\n",
     "    \"--inputs\",\n",
-    "    os.path.abspath(\"./data_folder\"),\n",
+    "    os.path.abspath(DIRECTORY + \"/data_folder\"),\n",
     "    \"--outputs\",\n",
     "    \"outputs\",\n",
     "    \"--estimators\",\n",
@@ -357,7 +357,7 @@
    "outputs": [],
    "source": [
     "src = ScriptRunConfig(\n",
-    "    source_directory=DIRECTORY + \"/scripts\",\n",
+    "    source_directory= DIRECTORY + \"/scripts\",\n",
     "    script=scrpt,\n",
     "    arguments=args,\n",
     "    run_config=run_config_system_managed,\n",
@@ -472,7 +472,7 @@
    },
    "outputs": [],
    "source": [
-    "host_dir = os.path.abspath(\"./data_folder\")\n",
+    "host_dir = os.path.abspath(DIRECTORY + \"/data_folder\")\n",
     "container_dir = \"/data_folder\"\n",
     "docker_arg = \"{}:{}\".format(host_dir, container_dir)"
    ]
@@ -523,7 +523,7 @@
    "outputs": [],
    "source": [
     "src = ScriptRunConfig(\n",
-    "    source_directory=DIRECTORY + \"/scripts\",\n",
+    "    source_directory= DIRECTORY + \"/scripts\",\n",
     "    script=scrpt,\n",
     "    arguments=args,\n",
     "    run_config=run_config_docker,\n",
