--- a/notebooks/04_CreateImage.ipynb
+++ b/notebooks/04_CreateImage.ipynb
@@ -322,7 +322,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dupes_test_path = './data_folder/dupes_test.tsv'\n",
+    "dupes_test_path = DIRECTORY + '/data_folder/dupes_test.tsv'\n",
     "dupes_test = pd.read_csv(dupes_test_path, sep='\\t', encoding='latin1')\n",
     "text_to_score = dupes_test.iloc[0, 4]\n",
     "text_to_score"
