--- a/notebooks/05_DeployOnAKS.ipynb
+++ b/notebooks/05_DeployOnAKS.ipynb
@@ -39,7 +39,8 @@
     "from azure_utils.utilities import text_to_json\n",
     "from azureml.core.compute import AksCompute, ComputeTarget\n",
     "from azureml.core.webservice import Webservice, AksWebservice\n",
-    "from azure_utils.machine_learning.utils import get_workspace_from_config"
+    "from azure_utils.machine_learning.utils import get_workspace_from_config\n",
+    "from notebooks import DIRECTORY"
    ]
   },
   {
@@ -301,7 +302,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dupes_test_path = './data_folder/dupes_test.tsv'\n",
+    "dupes_test_path = DIRECTORY + '/data_folder/dupes_test.tsv'\n",
     "dupes_test = pd.read_csv(dupes_test_path, sep='\\t', encoding='latin1')\n",
     "text_to_score = dupes_test.iloc[0, num_dupes_to_score]\n",
     "text_to_score"
