Trying to get test 2 to pass

--- a/notebooks/06_SpeedTestWebApp.ipynb
+++ b/notebooks/06_SpeedTestWebApp.ipynb
@@ -23,10 +23,12 @@
    "source": [
     "from urllib.parse import urlparse\n",
     "\n",
+    "from azure_utils.machine_learning.utils import get_workspace_from_config\n",
     "from azure_utils.utilities import get_auth\n",
     "from azureml.core.webservice import AksWebservice\n",
     "from azureml.core.workspace import Workspace\n",
-    "from dotenv import get_key, find_dotenv"
+    "from dotenv import get_key, find_dotenv\n",
+    "from notebooks import DIRECTORY"
    ]
   },
   {
@@ -35,16 +37,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_path = find_dotenv(raise_error_if_not_found=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ws = Workspace.from_config(auth=get_auth(env_path))\n",
+    "ws = get_workspace_from_config()\n",
     "print(ws.name, ws.resource_group, ws.location, ws.subscription_id, sep=\"\\n\")"
    ]
   },
@@ -126,7 +119,7 @@
     "from itertools import cycle\n",
     "\n",
     "_NUMBER_OF_REQUESTS = os.getenv('NUMBER_OF_REQUESTS', 100)\n",
-    "dupes_test_path = './data_folder/dupes_test.tsv'\n",
+    "dupes_test_path = DIRECTORY + '/data_folder/dupes_test.tsv'\n",
     "dupes_test = pd.read_csv(dupes_test_path, sep='\\t', encoding='latin1')\n",
     "dupes_to_score = dupes_test.iloc[:_NUMBER_OF_REQUESTS, 4]\n",
     "_SCORE_PATH = os.getenv('SCORE_PATH', \"/score\")\n",
