--- a/notebooks/07_RealTimeScoring.ipynb
+++ b/notebooks/07_RealTimeScoring.ipynb
@@ -78,7 +78,9 @@
     "from azureml.core.webservice import AksWebservice\n",
     "from azureml.core.workspace import Workspace\n",
     "from dotenv import get_key, find_dotenv\n",
-    "from azure_utils.utilities import read_questions, text_to_json, get_auth"
+    "from azure_utils.machine_learning.utils import get_workspace_from_config\n",
+    "from azure_utils.utilities import read_questions, text_to_json, get_auth\n",
+    "from notebooks import DIRECTORY"
    ]
   },
   {
@@ -87,16 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "env_path = find_dotenv(raise_error_if_not_found=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ws = Workspace.from_config(auth=get_auth(env_path))\n",
+    "ws = get_workspace_from_config()\n",
     "print(ws.name, ws.resource_group, ws.location, sep=\"\\n\")"
    ]
   },
@@ -554,7 +547,7 @@
     "questions_answerid = 'AnswerId'\n",
     "questions_text = 'Text'\n",
     "questions_probability = 'Probability'\n",
-    "questions_path = './data_folder/questions.tsv'\n",
+    "questions_path = DIRECTORY + '/data_folder/questions.tsv'\n",
     "questions = read_questions(questions_path, questions_id, questions_answerid)"
    ]
   },
@@ -599,7 +592,7 @@
     "duplicates_id = 'Id'\n",
     "duplicates_answerid = 'AnswerId'\n",
     "duplicates_text = 'Text'\n",
-    "duplicates_path = './data_folder/dupes_test.tsv'\n",
+    "duplicates_path = DIRECTORY + '/data_folder/dupes_test.tsv'\n",
     "duplicates = read_questions(duplicates_path, duplicates_id, duplicates_answerid)"
    ]
   },
