Trying to get test 2 to pass

--- a/notebooks/04_CreateImage.ipynb
+++ b/notebooks/04_CreateImage.ipynb
@@ -135,9 +135,9 @@
     "import sys\n",
     "import pandas as pd\n",
     "import json\n",
-    "from duplicate_model import DuplicateModel\n",
     "import logging\n",
     "import timeit as t\n",
+    "from sklearn.externals import joblib\n",
     "from azureml.core.model import Model\n",
     "from azureml.contrib.services.aml_request import rawhttp\n",
     "\n",
@@ -190,7 +190,49 @@
     "            \"version\": \"\"\n",
     "        }\n",
     "        return (resp_body)\n",
-    "    return AMLResponse(\"bad request\", 500)"
+    "    return AMLResponse(\"bad request\", 500)\n",
+    "\n",
+    "\n",
+    "class DuplicateModel(object):\n",
+    "\n",
+    "    questions_cols = ['Id', 'AnswerId', 'Text']\n",
+    "    dup_col = 'Text_x'\n",
+    "    id_col = 'Id_y'\n",
+    "    answerId_col = 'AnswerId_y'\n",
+    "    orig_col = 'Text_y'\n",
+    "    feature_cols = [dup_col, orig_col]\n",
+    "    probabilities_col = 'probabilities'\n",
+    "\n",
+    "    def __init__(self, model_path, questions_path):\n",
+    "        self.model_path = model_path\n",
+    "        self.questions_path = questions_path\n",
+    "        self.model = joblib.load(model_path)\n",
+    "        self.questions = pd.read_csv(questions_path, sep='\\t',\n",
+    "                                     encoding='latin1')\n",
+    "        self.questions = self.questions[self.questions_cols]\n",
+    "        self.questions.columns = [\n",
+    "            self.id_col, self.answerId_col, self.orig_col]\n",
+    "\n",
+    "    def score(self, Text):\n",
+    "        # Create a scoring dataframe.\n",
+    "        test = self.questions.copy()\n",
+    "        test[self.dup_col] = Text\n",
+    "        test_X = test[self.feature_cols]\n",
+    "\n",
+    "        # Score the text.\n",
+    "        test[self.probabilities_col] = self.model.predict_proba(\n",
+    "            test_X)[:, 1]\n",
+    "\n",
+    "        # Order the data by descending probability.\n",
+    "        test.sort_values(by=self.probabilities_col, ascending=False,\n",
+    "                         inplace=True)\n",
+    "\n",
+    "        # Extract the original question ids, answer ids, and probabilities.\n",
+    "        scores = test[[self.id_col, self.answerId_col, self.probabilities_col]]\n",
+    "        pairs = [x[1:] for x in scores.itertuples()]\n",
+    "\n",
+    "        # Return the result.\n",
+    "        return pairs\n"
    ]
   },
   {
