Trying to get test 2 to pass

--- a/notebooks/04_CreateImage.ipynb
+++ b/notebooks/04_CreateImage.ipynb
@@ -141,7 +141,7 @@
     "from azureml.core.model import Model\n",
     "from azureml.contrib.services.aml_request import rawhttp\n",
     "\n",
-    "sys.path.append(DIRECTORY + '/scripts/')\n",
+    "sys.path.append('./scripts/')\n",
     "\n",
     "\n",
     "def init():\n",
