--- a/notebooks/04_CreateImage.ipynb
+++ b/notebooks/04_CreateImage.ipynb
@@ -149,7 +149,7 @@
     "    global model\n",
     "    model_name = 'question_match_model'\n",
     "    model_path = Model.get_model_path(model_name)\n",
-    "    questions_path = DIRECTORY + '/data_folder/questions.tsv'\n",
+    "    questions_path = '/data_folder/questions.tsv'\n",
     "    start = t.default_timer()\n",
     "    model = DuplicateModel(model_path, questions_path)\n",
     "    end = t.default_timer()\n",
