Trying to get test 2 to pass

--- a/notebooks/06_SpeedTestWebApp.ipynb
+++ b/notebooks/06_SpeedTestWebApp.ipynb
@@ -24,11 +24,8 @@
     "from urllib.parse import urlparse\n",
     "\n",
     "from azure_utils.machine_learning.utils import get_workspace_from_config\n",
-    "from azure_utils.utilities import get_auth\n",
     "from azureml.core.webservice import AksWebservice\n",
-    "from azureml.core.workspace import Workspace\n",
-    "from dotenv import get_key, find_dotenv\n",
-    "from notebooks import DIRECTORY"
+    "from dotenv import get_key"
    ]
   },
   {
@@ -119,7 +116,7 @@
     "from itertools import cycle\n",
     "\n",
     "_NUMBER_OF_REQUESTS = os.getenv('NUMBER_OF_REQUESTS', 100)\n",
-    "dupes_test_path = DIRECTORY + '/data_folder/dupes_test.tsv'\n",
+    "dupes_test_path = './data_folder/dupes_test.tsv'\n",
     "dupes_test = pd.read_csv(dupes_test_path, sep='\\t', encoding='latin1')\n",
     "dupes_to_score = dupes_test.iloc[:_NUMBER_OF_REQUESTS, 4]\n",
     "_SCORE_PATH = os.getenv('SCORE_PATH', \"/score\")\n",
