--- a/notebooks/04_CreateImage.ipynb
+++ b/notebooks/04_CreateImage.ipynb
@@ -140,6 +140,7 @@
     "from sklearn.externals import joblib\n",
     "from azureml.core.model import Model\n",
     "from azureml.contrib.services.aml_request import rawhttp\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
     "\n",
     "sys.path.append('./scripts/')\n",
     "\n",
@@ -232,7 +233,64 @@
     "        pairs = [x[1:] for x in scores.itertuples()]\n",
     "\n",
     "        # Return the result.\n",
-    "        return pairs\n"
+    "        return pairs\n",
+    "\n",
+    "\n",
+    "class ItemSelector(BaseEstimator, TransformerMixin):\n",
+    "    \"\"\"For data grouped by feature, select subset of data at provided\n",
+    "    key(s).\n",
+    "\n",
+    "    The data are expected to be stored in a 2D data structure, where\n",
+    "    the first index is over features and the second is over samples,\n",
+    "    i.e.\n",
+    "\n",
+    "    >> len(data[keys]) == n_samples\n",
+    "\n",
+    "    Please note that this is the opposite convention to scikit-learn\n",
+    "    feature matrixes (where the first index corresponds to sample).\n",
+    "\n",
+    "    ItemSelector only requires that the collection implement getitem\n",
+    "    (data[keys]).  Examples include: a dict of lists, 2D numpy array,\n",
+    "    Pandas DataFrame, numpy record array, etc.\n",
+    "\n",
+    "    >> data = {'a': [1, 5, 2, 5, 2, 8],\n",
+    "               'b': [9, 4, 1, 4, 1, 3]}\n",
+    "    >> ds = ItemSelector(key='a')\n",
+    "    >> data['a'] == ds.transform(data)\n",
+    "\n",
+    "    ItemSelector is not designed to handle data grouped by sample\n",
+    "    (e.g. a list of dicts).  If your data are structured this way,\n",
+    "    consider a transformer along the lines of\n",
+    "    `sklearn.feature_extraction.DictVectorizer`.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    keys : hashable or list of hashable, required\n",
+    "        The key(s) corresponding to the desired value(s) in a mappable.\n",
+    "\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self, keys):\n",
+    "        if type(keys) is list:\n",
+    "            if any([getattr(key, '__hash__', None) is None for key in keys]):\n",
+    "                raise TypeError('Not all keys are hashable')\n",
+    "        elif getattr(keys, '__hash__', None) is None:\n",
+    "            raise TypeError('keys is not hashable')\n",
+    "        self.keys = keys\n",
+    "\n",
+    "    def fit(self, x, *args, **kwargs):\n",
+    "        if type(self.keys) is list:\n",
+    "            if not all([key in x for key in self.keys]):\n",
+    "                raise KeyError('Not all keys in data')\n",
+    "        elif self.keys not in x:\n",
+    "            raise KeyError('key not in data')\n",
+    "        return self\n",
+    "\n",
+    "    def transform(self, data_dict, *args, **kwargs):\n",
+    "        return data_dict[self.keys]\n",
+    "\n",
+    "    def get_feature_names(self):\n",
+    "        return self.keys\n"
    ]
   },
   {
