--- a/notebooks/03_DevelopScoringScript.ipynb
+++ b/notebooks/03_DevelopScoringScript.ipynb
@@ -108,11 +108,11 @@
     "%%writefile score.py\n",
     "\n",
     "import pandas as pd\n",
+    "\n",
     "import json\n",
-    "from duplicate_model import DuplicateModel\n",
     "import logging\n",
     "import timeit as t\n",
-    "\n",
+    "from azure_utils.machine_learning.duplicate_model import DuplicateModel\n",
     "\n",
     "def init():\n",
     "    logger = logging.getLogger(\"scoring_script\")\n",
@@ -161,10 +161,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
