--- a/notebooks/04_CreateImage.ipynb
+++ b/notebooks/04_CreateImage.ipynb
@@ -141,6 +141,7 @@
     "from azureml.core.model import Model\n",
     "from azureml.contrib.services.aml_request import rawhttp\n",
     "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "from azure_utils.machine_learning.duplicate_model import DuplicateModel\n",
     "\n",
     "sys.path.append('./scripts/')\n",
     "\n",
@@ -191,106 +192,7 @@
     "            \"version\": \"\"\n",
     "        }\n",
     "        return (resp_body)\n",
-    "    return AMLResponse(\"bad request\", 500)\n",
-    "\n",
-    "\n",
-    "class DuplicateModel(object):\n",
-    "\n",
-    "    questions_cols = ['Id', 'AnswerId', 'Text']\n",
-    "    dup_col = 'Text_x'\n",
-    "    id_col = 'Id_y'\n",
-    "    answerId_col = 'AnswerId_y'\n",
-    "    orig_col = 'Text_y'\n",
-    "    feature_cols = [dup_col, orig_col]\n",
-    "    probabilities_col = 'probabilities'\n",
-    "\n",
-    "    def __init__(self, model_path, questions_path):\n",
-    "        self.model_path = model_path\n",
-    "        self.questions_path = questions_path\n",
-    "        self.model = joblib.load(model_path)\n",
-    "        self.questions = pd.read_csv(questions_path, sep='\\t',\n",
-    "                                     encoding='latin1')\n",
-    "        self.questions = self.questions[self.questions_cols]\n",
-    "        self.questions.columns = [\n",
-    "            self.id_col, self.answerId_col, self.orig_col]\n",
-    "\n",
-    "    def score(self, Text):\n",
-    "        # Create a scoring dataframe.\n",
-    "        test = self.questions.copy()\n",
-    "        test[self.dup_col] = Text\n",
-    "        test_X = test[self.feature_cols]\n",
-    "\n",
-    "        # Score the text.\n",
-    "        test[self.probabilities_col] = self.model.predict_proba(\n",
-    "            test_X)[:, 1]\n",
-    "\n",
-    "        # Order the data by descending probability.\n",
-    "        test.sort_values(by=self.probabilities_col, ascending=False,\n",
-    "                         inplace=True)\n",
-    "\n",
-    "        # Extract the original question ids, answer ids, and probabilities.\n",
-    "        scores = test[[self.id_col, self.answerId_col, self.probabilities_col]]\n",
-    "        pairs = [x[1:] for x in scores.itertuples()]\n",
-    "\n",
-    "        # Return the result.\n",
-    "        return pairs\n",
-    "\n",
-    "\n",
-    "class ItemSelector(BaseEstimator, TransformerMixin):\n",
-    "    \"\"\"For data grouped by feature, select subset of data at provided\n",
-    "    key(s).\n",
-    "\n",
-    "    The data are expected to be stored in a 2D data structure, where\n",
-    "    the first index is over features and the second is over samples,\n",
-    "    i.e.\n",
-    "\n",
-    "    >> len(data[keys]) == n_samples\n",
-    "\n",
-    "    Please note that this is the opposite convention to scikit-learn\n",
-    "    feature matrixes (where the first index corresponds to sample).\n",
-    "\n",
-    "    ItemSelector only requires that the collection implement getitem\n",
-    "    (data[keys]).  Examples include: a dict of lists, 2D numpy array,\n",
-    "    Pandas DataFrame, numpy record array, etc.\n",
-    "\n",
-    "    >> data = {'a': [1, 5, 2, 5, 2, 8],\n",
-    "               'b': [9, 4, 1, 4, 1, 3]}\n",
-    "    >> ds = ItemSelector(key='a')\n",
-    "    >> data['a'] == ds.transform(data)\n",
-    "\n",
-    "    ItemSelector is not designed to handle data grouped by sample\n",
-    "    (e.g. a list of dicts).  If your data are structured this way,\n",
-    "    consider a transformer along the lines of\n",
-    "    `sklearn.feature_extraction.DictVectorizer`.\n",
-    "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    keys : hashable or list of hashable, required\n",
-    "        The key(s) corresponding to the desired value(s) in a mappable.\n",
-    "\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self, keys):\n",
-    "        if type(keys) is list:\n",
-    "            if any([getattr(key, '__hash__', None) is None for key in keys]):\n",
-    "                raise TypeError('Not all keys are hashable')\n",
-    "        elif getattr(keys, '__hash__', None) is None:\n",
-    "            raise TypeError('keys is not hashable')\n",
-    "        self.keys = keys\n",
-    "\n",
-    "    def fit(self, x, *args, **kwargs):\n",
-    "        if type(self.keys) is list:\n",
-    "            if not all([key in x for key in self.keys]):\n",
-    "                raise KeyError('Not all keys in data')\n",
-    "        elif self.keys not in x:\n",
-    "            raise KeyError('key not in data')\n",
-    "        return self\n",
-    "\n",
-    "    def transform(self, data_dict, *args, **kwargs):\n",
-    "        return data_dict[self.keys]\n",
-    "\n",
-    "    def get_feature_names(self):\n",
-    "        return self.keys\n"
+    "    return AMLResponse(\"bad request\", 500)"
    ]
   },
   {
@@ -308,7 +210,8 @@
    "source": [
     "conda_pack = [\"scikit-learn==0.19.1\", \"pandas==0.23.3\"]\n",
     "requirements = [\n",
-    "    \"lightgbm==2.1.2\", \"azureml-defaults==1.0.57\", \"azureml-contrib-services\"\n",
+    "    \"lightgbm==2.1.2\", \"azureml-defaults==1.0.57\", \"azureml-contrib-services\", \n",
+    "    \"Microsoft-AI-Azure-Utility-Samples\"\n",
     "]"
    ]
   },
@@ -343,9 +246,7 @@
     "        \"type\": \"lightgbm\"\n",
     "    },\n",
     "    dependencies=[\n",
-    "        DIRECTORY + \"/data_folder/questions.tsv\",\n",
-    "        DIRECTORY + \"/duplicate_model.py\",\n",
-    "        DIRECTORY + \"/scripts/item_selector.py\",\n",
+    "        DIRECTORY + \"/data_folder/questions.tsv\"\n",
     "    ],\n",
     ")\n",
     "\n",
@@ -485,10 +386,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
