--- a/notebooks/02_TrainOnLocal.ipynb
+++ b/notebooks/02_TrainOnLocal.ipynb
@@ -163,6 +163,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%%writefile create_model.py\n",
+    "from azure_utils.machine_learning import create_model\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    create_model.main()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "scrpt = \"create_model.py\"\n",
     "args = [\n",
     "    \"--inputs\",\n",
@@ -183,7 +196,7 @@
    "outputs": [],
    "source": [
     "src = ScriptRunConfig(\n",
-    "    source_directory=DIRECTORY + \"/scripts\",\n",
+    "    source_directory=\".\",\n",
     "    script=scrpt,\n",
     "    arguments=args,\n",
     "    run_config=run_config_user_managed,\n",
