--- a/notebooks/02_TrainOnLocal.ipynb
+++ b/notebooks/02_TrainOnLocal.ipynb
@@ -370,7 +370,7 @@
    "outputs": [],
    "source": [
     "src = ScriptRunConfig(\n",
-    "    source_directory= DIRECTORY + \"/scripts\",\n",
+    "    source_directory= \".\",\n",
     "    script=scrpt,\n",
     "    arguments=args,\n",
     "    run_config=run_config_system_managed,\n",
