--- a/notebooks/02_TrainOnLocal.ipynb
+++ b/notebooks/02_TrainOnLocal.ipynb
@@ -536,7 +536,7 @@
    "outputs": [],
    "source": [
     "src = ScriptRunConfig(\n",
-    "    source_directory= DIRECTORY + \"/scripts\",\n",
+    "    source_directory= \".\",\n",
     "    script=scrpt,\n",
     "    arguments=args,\n",
     "    run_config=run_config_docker,\n",
