--- a/notebooks/02_TrainOnLocal.ipynb
+++ b/notebooks/02_TrainOnLocal.ipynb
@@ -163,7 +163,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%writefile create_model.py\n",
+    "if not os.path.isdir(\"script\"):\n",
+    "    os.mkdir(\"script\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%writefile script/create_model.py\n",
     "from azure_utils.machine_learning import create_model\n",
     "\n",
     "if __name__ == '__main__':\n",
@@ -196,7 +206,7 @@
    "outputs": [],
    "source": [
     "src = ScriptRunConfig(\n",
-    "    source_directory=\".\",\n",
+    "    source_directory=\"./script\",\n",
     "    script=scrpt,\n",
     "    arguments=args,\n",
     "    run_config=run_config_user_managed,\n",
@@ -370,7 +380,7 @@
    "outputs": [],
    "source": [
     "src = ScriptRunConfig(\n",
-    "    source_directory= \".\",\n",
+    "    source_directory=\"./script\",\n",
     "    script=scrpt,\n",
     "    arguments=args,\n",
     "    run_config=run_config_system_managed,\n",
@@ -536,7 +546,7 @@
    "outputs": [],
    "source": [
     "src = ScriptRunConfig(\n",
-    "    source_directory= \".\",\n",
+    "    source_directory=\"./script\",\n",
     "    script=scrpt,\n",
     "    arguments=args,\n",
     "    run_config=run_config_docker,\n",
