Trying to get test 2 to pass

--- a/notebooks/05_DeployOnAKS.ipynb
+++ b/notebooks/05_DeployOnAKS.ipynb
@@ -366,7 +366,7 @@
     "r = requests.post(\n",
     "    scoring_url, data=json_text,\n",
     "    headers=headers)  # Run the request twice since the first time takes a\n",
-    "%time r = requests.post(scoring_url, data=jsontext, headers=headers) # little longer due to the loading of the model\n",
+    "%time r = requests.post(scoring_url, data=json_text, headers=headers) # little longer due to the loading of the model\n",
     "print(r)\n",
     "r.json()"
    ]
